rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_one_in_char_set__tests__ascii_keep_right_first_char.snap
---
source: crates/rax/src/text/rules/until_one_in_char_set.rs
expression: result
---
Ok(
    (
        "",
        "a123",
    ),
)
